# xihr

./: .pre-commit-config.yaml  AUTHORS.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  pyrightconfig.json  repo.sh  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yml
data/sample/: horses.csv  payoffs.csv  races.csv
docs/: api.md  installation.md  project_codex_rule.md  usage.md
notebooks/: simulation_demo.ipynb
strategies/: __init__.py  naive_favorite.py  value_betting.py
tests/: __init__.py  test_app.py  test_engine.py
tests/scratch/: exapmle_data_feeder.ipynb
xihr/: __init__.py  analytics.py  cli.py  engine.py  events.py  models.py  settings.py  strategy.py
xihr/adaptors/: __init__.py  base.py  csv_adaptor.py  db_adaptor.py  excel_adaptor.py
xihr/backtest/: __init__.py  analyzers.py  metrics.py  simulator.py
xihr/config/: __init__.py  config.py  settings.py
xihr/core/: __init__.py  _cron.py  broker.py  bus.py  clock.py  engine.py  event.py  events.py  registry.py  types.py
xihr/core/datafeed/: base.py  pckeiba.py
xihr/core/datafeed/dataloader/: constant.py
xihr/core/datafeed/dataloader/etl/: __init__.py  dataloader.py  query.py
xihr/core/datafeed/dataloader/transform/: __init__.py  entires.py  payoff.py  race.py  transformation.py
xihr/data/: __init__.py  models.py  providers.py  repositories.py  transforms.py
xihr/execution/: __init__.py  broker.py  router.py  slippage.py
xihr/models/: __init__.py  base.py  pipelines.py
xihr/monitoring/: __init__.py  health.py  logging.py
xihr/repositories/: __init__.py  betting_repository.py  data_repository.py
xihr/storage/: __init__.py  artifacts.py  kv.py
xihr/strategy/: __init__.py  base.py  risk.py  rules.py
xihr/util/: __init__.py  postgres_util.py
