[tool]
[tool.poetry]
name = "xihr"
version = "0.1.0"
homepage = "https://github.com/xxxiio/xihr"
description = "Japanese horse racing betting engine, support backtest and live bet."
authors = ["xliu <xlatom1009@gmail.com>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]
packages = [
    { include = "xihr" },
    { include = "strategies" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pandas = "^2.2.2"
pandas-stubs = "^2.2.2"
pandera = "^0.20.4"
psycopg = { version = "^3.2.6", extras = ["binary", "pool"]}
SQLAlchemy = ">=2.0.30"
pydantic = "^2.11.5"
pydantic_settings = "^2.9.1"
typer = "^0.12.5"
PyYAML = "^6.0.2"
openpyxl = "^3.1.5"

black  = { version = "^22.3.0", optional = true}
isort  = { version = "5.10.1", optional = true}
flake8  = { version = "7.1.1", optional = true}
flake8-docstrings = { version = "^1.6.0", optional = true }
pytest  = { version = "^7.0.1", optional = true}
pytest-cov  = { version = "^3.0.0", optional = true}
pytest-mock  = { version = "^3.14.0", optional = true}
tox  = { version = "^3.24.5", optional = true}
mkdocs  = { version = "^1.6.1", optional = true}
mkdocs-include-markdown-plugin  = { version = "^7.0.0", optional = true}
mkdocs-material  = { version = "^9.5.43", optional = true}
mkdocstrings  = { version = "^0.26.2", optional = true}
mkdocstrings-python = { version = "^1.12.2", optional = true}
mkdocs-material-extensions  = { version = "^1.3.1", optional = true}
twine  = { version = "^3.8.0", optional = true}
mkdocs-autorefs = {version = "^1.2.0", optional = true}
pre-commit = {version = "^2.17.0", optional = true}
toml = {version = "^0.10.2", optional = true}
docutils = {version = "^0.21.1", optional = true}
mike = { version="^1.1.2", optional=true}
mypy = {version = "^1.5.1", optional = true}
setuptools = {version="^68.0", optional = true}
pkginfo = {version="^1.9", optional = true}
virtualenv = {version="^20.0", optional = true}
croniter = "^2.0"

[tool.poetry.extras]
test = [
    "pytest",
    "pytest-cov"
    ]

dev = ["tox",
    "pre-commit",
    "twine",
    "toml",
    "black",
    "isort",
    "flake8",
    "flake8-docstrings",
    "mypy"
    ]

doc = [
    "mkdocs",
    "mkdocs-include-markdown-plugin",
    "mkdocs-material",
    "mkdocstrings",
    "mkdocs-material-extension",
    "mkdocs-autorefs",
    "mike",
    "setuptools",
    "pkginfo",
    "virtualenv"
    ]



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | \.history
)/
'''
[tool.isort]
profile = "black"
